# tgbotcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  echo_bot.cpp
include/tgbotcpp/: Api.hpp  Bot.hpp  tgbotcpp.hpp
include/tgbotcpp/net/: HttpClient.hpp  OpenSslHttpClient.hpp
include/tgbotcpp/types/: CallbackQuery.hpp  Chat.hpp  InlineQuery.hpp  Message.hpp  Update.hpp  User.hpp
src/: Api.cpp  Bot.cpp
src/json/: Json.cpp  Json.hpp
src/net/: OpenSslHttpClient.cpp  Url.hpp
tests/: CMakeLists.txt  test_main.cpp
